--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
       <include src="./partials/index-main.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/team.html"></include> 
     <include src="./partials/modal-window.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
